CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( lpr )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
SET(CMAKE_VERBOSE_MAKEFILE true)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_C_FLAGS_RELEASE "-Wall")
ADD_EXECUTABLE(./exe/a.out Source/main_env_sdcd.cpp Source/blob.cpp Source/imgproc.cpp Source/lpr.cpp Tracker/Source/kalman.cpp Tracker/Source/meanshift.cpp)
target_link_libraries( ./exe/a.out ${OpenCV_LIBS} )

ADD_EXECUTABLE(./exe/b.out Source/main_env_cam.cpp Source/blob.cpp Source/imgproc.cpp Source/lpr.cpp Tracker/Source/kalman.cpp Tracker/Source/meanshift.cpp)
target_link_libraries( ./exe/b.out ${OpenCV_LIBS} )
